# teraflopai-python

./: LICENSE  README.md  pyproject.toml
examples/: embeddings.py  search.py  segmentation.py
src/teraflopai/: __init__.py  client.py
